<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">filebox</string>
    <string name="action_settings">Settings</string>
    <string name="Connexion">Veuillez renseigner vos informations d\'authentification :</string>
    <string name="Identifiant">Identifiant</string>
    <string name="mdp">Mot de passe</string>
    <string name="connexionaction">Connexion</string>
    <string name="title_activity_list">ListActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="compte">Mon compte</string>
    <string name="menu">Menu</string>
    <string name="fleche">fleche</string>
    <string name="title_activity_file_detail">FileDetailActivity</string>
    <string name="typefile">typeFile</string>
    <string name="title_activity_account">AccountActivity</string>
    <string name="deconnexion">Déconnexion</string>
    <string name="connectedas">"Connecté avec le compte "</string>
    <string name="unknown">unknown</string>
    <string name="confirmdisconnection">Confirmer la déconnexion ?</string>

</resources>
